--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,6 @@ dist: precise
 language: java
 jdk:
   - oraclejdk8
-deploy:
-  on:
-    tags: true
+env:
+   mysql -u root -e "CREATE DATABASE db_point_control;"
+   mysql -u root -e "GRANT ALL PRIVILEGES ON db_point_control.* TO 'travis'@'%';";
