--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
-#workaround to build travis
-dist: precise
 language: java
 jdk:
   - oraclejdk8
+#workaround to build travis
+dist: precise
+sudo: false
