--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 language: java
 jdk:
   - oraclejdk8
+services:
+  - mysql
 before_install:
+- mysql -e 'CREATE DATABASE db_point_control;'
 - mysql -u root -e "SET PASSWORD FOR 'root'@'localhost' = PASSWORD('root')"
 
