--- a/src/main/resources/aplication-test.properties
+++ b/src/main/resources/aplication-test.properties
@@ -1,9 +1,15 @@
-#config to H2 in memory
-spring.jpa.hibernate.ddl-auto=create
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:db;DB_CLOSE_DELAY=-1
-spring.datasource.username=sa
-spring.datasource.password=sa
+#MySQL
+spring.jpa.hibernate.ddl-auto=none
+spring.datasource.url=jdbc:mysql://localhost:3306/db_point_control_test
+spring.datasource.username=root
+spring.datasource.password=root
+
+#Show SQL commands
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.use_sql_comments=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.type=trace
+spring.jpa.properties.hibernate.id.new_generator_mappings=false
 
 #FlyWay
 spring.flyway.enabled=false
