--- a/pom.xml
+++ b/pom.xml
@@ -78,7 +78,7 @@
 
 		<!-- Web -->
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
+			<groupId>org.springframework.bootaaa</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
@@ -86,6 +86,12 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+
+		<!-- Jackson datatype -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-jdk8</artifactId>
 		</dependency>
 	</dependencies>
 
