--- a/pom.xml
+++ b/pom.xml
@@ -78,7 +78,7 @@
 
 		<!-- Web -->
 		<dependency>
-			<groupId>org.springframework.bootaaa</groupId>
+			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
@@ -89,10 +89,10 @@
 		</dependency>
 
 		<!-- Jackson datatype -->
-		<dependency>
-			<groupId>com.fasterxml.jackson.datatype</groupId>
-			<artifactId>jackson-datatype-jdk8</artifactId>
-		</dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jdk8</artifactId>
+        </dependency>
 	</dependencies>
 
 	<build>
