Imported from https://murilodbueno@github.com/murilodbueno/point_control_api.git

--- a/project.config
+++ b/project.config
@@ -1,4 +1,23 @@
 [access]
 	inheritFrom = All-Projects
 [submit]
-	action = inherit
+[project]
+	description = API para controle de ponto com Java e Spring Boot
+[access "refs/*"]
+	owner = group user/Murilo Diego Bueno (murilodbueno)
+[access "refs/for/refs/*"]
+	label-Code-Review = -2..+2 group user/Murilo Diego Bueno (murilodbueno)
+	label-Verified = -1..+1 group user/Murilo Diego Bueno (murilodbueno)
+	push = group user/Murilo Diego Bueno (murilodbueno)
+	read = group user/Murilo Diego Bueno (murilodbueno)
+	rebase = group user/Murilo Diego Bueno (murilodbueno)
+	removeReviewer = group user/Murilo Diego Bueno (murilodbueno)
+	submit = group user/Murilo Diego Bueno (murilodbueno)
+[access "refs/heads/*"]
+	create = group user/Murilo Diego Bueno (murilodbueno)
+	push = +force group user/Murilo Diego Bueno (murilodbueno)
+	pushMerge = group user/Murilo Diego Bueno (murilodbueno)
+	read = group user/Murilo Diego Bueno (murilodbueno)
+[access "refs/tags/*"]
+	push = group user/Murilo Diego Bueno (murilodbueno)
+	push = +force group user/Murilo Diego Bueno (murilodbueno)
